--- a/app/src/main/res/layout/app_list_item.xml
+++ b/app/src/main/res/layout/app_list_item.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:id="@+id/app_info_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -8,11 +10,13 @@
     <ImageView
         android:id="@+id/app_icon"
         android:layout_width="@dimen/app_icon_size"
-        android:layout_height="@dimen/app_icon_size" />
+        android:layout_height="@dimen/app_icon_size"
+        android:layout_gravity="center"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/app_name"
             android:layout_width="wrap_content"
@@ -20,18 +24,25 @@
             android:text="小米刷刷卡"/>
 
         <TextView
+            android:id="@+id/version_code"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/app_name"
+            android:text="1.2.3"/>
+
+        <TextView
             android:id="@+id/package_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/app_name"
+            android:layout_below="@id/version_code"
             android:text="com.miui.tsmclient"/>
 
         <TextView
             android:id="@+id/hash"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/app_name"
-            android:text="8327ds87sda787878sjhkda09210" />
+            android:layout_below="@id/package_name"
+            android:text="8327ds87sda787878sjhkda09210"/>
 
         <TextView
             android:id="@+id/first_install_date_title"
